# tinytransformer

./: .gitignore  colab_setup.ipynb  cursor.md  pyproject.toml  requirements.txt
src/tinytransformer/: main.py
src/tinytransformer/config/: cli.py  config.py
src/tinytransformer/data/: build_dataset.py  data.py  prepare_dataset.py  save_tokens.py  train_tokenizer.py
src/tinytransformer/models/: base_lm.py  factory.py  tokenizer.json  tokenizer.py  transformer.py
src/tinytransformer/scripts/: check_tokens.py
src/tinytransformer/training/: generate.py  train.py
tests/: test_builddataset.py  test_config.py  test_data.py  test_generate.py  test_main.py  test_model_save_and_load.py  test_tokenizer.py  test_tokens_npy.py  test_train.py  test_transformer.py
